--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <span class="author-block">
                 <a href="https://github.com/Pushazf" target="_blank">Kewei Zhang<sup>1</sup></a>,</span>
               <span class="author-block">
-                <a href="https://xyliu339.github.io/" target="_blank">Xiaoyang Liuo<sup>2</sup></a>,</span>
+                <a href="https://xyliu339.github.io/" target="_blank">Xiaoyang Liu<sup>1</sup></a>,</span>
               <span class="author-block">
                 <a href="" target="_blank">Weihang Zhang<sup>3</sup></a>,</span>
               <span class="author-block">
@@ -68,7 +68,7 @@
               <span class="author-block">
                 <a href="" target="_blank">Yifan Fu<sup>5</sup></a><sup>*</sup></span>
               <span class="author-block">
-                <a href="http://yulunzhang.com/" target="_blank">Yulun Zhang<sup>6</sup></a><sup>*</sup></span>
+                <a href="http://yulunzhang.com/" target="_blank">Yulun Zhang<sup>1</sup></a><sup>*</sup></span>
             </div>
             
             <div class="is-size-5 publication-institutions">
