--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
           </p>
           <ul>
             <li>
-              <strong>PSNR:</strong> 4 dB higher than previous quantization methods
+              <strong>PSNR:</strong> 4 dB higher than previous quantization methods on W4A4
             </li>
           </ul>
         </div>
