author information fixed

--- a/index.html
+++ b/index.html
@@ -52,29 +52,30 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">QuantDemoire: Steering One-Step Diffusion Model with Fidelity-Rich Decoder for Fast Image Compression</h1>
+            <h1 class="title is-1 publication-title">QuantDemoire: Quantization with Outlier Aware for Image Demoiréing</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="https://zheng-chen.cn" target="_blank">Zheng Chen<sup>1</sup></a>,</span>
+                <a href="https://zheng-chen.cn" target="_blank">Zheng Chen<sup>1</sup></a><sup>*</sup></span>
               <span class="author-block">
-                <a href="https://github.com/Pushazf" target="_blank">Kewei Zhang<sup>1</sup></a>,</span>
+                <a href="https://github.com/Pushazf" target="_blank">Kewei Zhang<sup>1</sup></a><sup>*</sup></span>
               <span class="author-block">
                 <a href="https://xyliu339.github.io/" target="_blank">Xiaoyang Liu<sup>1</sup></a>,</span>
               <span class="author-block">
-                <a href="" target="_blank">Weihang Zhang<sup>3</sup></a>,</span>
+                <a href="" target="_blank">Weihang Zhang<sup>2</sup></a>,</span>
               <span class="author-block">
-                <a href="" target="_blank">Mengfan Wang<sup>4</sup></a>,</span>
+                <a href="" target="_blank">Mengfan Wang<sup>2</sup></a>,</span>
               <span class="author-block">
-                <a href="" target="_blank">Yifan Fu<sup>5</sup></a><sup>*</sup></span>
+                <a href="" target="_blank">Yifan Fu<sup>2</sup></a>,</span>
               <span class="author-block">
-                <a href="http://yulunzhang.com/" target="_blank">Yulun Zhang<sup>1</sup></a><sup>*</sup></span>
+                <a href="http://yulunzhang.com/" target="_blank">Yulun Zhang<sup>1</sup></a>,</span>
             </div>
             
             <div class="is-size-5 publication-institutions">
               <!-- Institutions -->
               <span class="institution-block">
                 <sup>1</sup>Shanghai Jiao Tong University,
+                <sup>2</sup>Central Media Technology Institute, Huawei
               </span>
               <span class="coorespond">
                 <small><br><sup>*</sup>Indicates Corresponding Author</a></small>
