--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="https://zheng-chen.cn" target="_blank">Zheng Chen<sup>1</sup></a><sup>*</sup></span>
+                <a href="https://zheng-chen.cn" target="_blank">Zheng Chen<sup>1</sup></a>,</span>
               <span class="author-block">
-                <a href="https://github.com/Pushazf" target="_blank">Kewei Zhang<sup>1</sup></a><sup>*</sup></span>
+                <a href="https://github.com/Pushazf" target="_blank">Kewei Zhang<sup>1</sup></a>,</span>
               <span class="author-block">
                 <a href="https://xyliu339.github.io/" target="_blank">Xiaoyang Liu<sup>1</sup></a>,</span>
               <span class="author-block">
@@ -68,7 +68,7 @@
               <span class="author-block">
                 <a href="" target="_blank">Yifan Fu<sup>2</sup></a>,</span>
               <span class="author-block">
-                <a href="http://yulunzhang.com/" target="_blank">Yulun Zhang<sup>1</sup></a>,</span>
+                <a href="http://yulunzhang.com/" target="_blank">Yulun Zhang<sup>1</sup></a><sup>*</sup></span>
             </div>
             
             <div class="is-size-5 publication-institutions">
