--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
                 <sup>2</sup>Central Media Technology Institute, Huawei
               </span>
               <span class="coorespond">
-                <small><br><sup>*</sup>Indicates Corresponding Author</a></small>
+                <small><br>
+                  <sup>*</sup>Equal Contribution. <sup>†</sup>Corresponding Author
+                </small>
               </span>
             </div>
 
