--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               </span>
               <span class="coorespond">
                 <small><br>
-                  <sup>*</sup>Equal Contribution. <sup>†</sup>Corresponding Author
+                  <sup>*</sup>Indicates Equal Contribution. <sup>†</sup>Indicates Corresponding Author
                 </small>
               </span>
             </div>
