--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             
                 <!-- ArXiv abstract link -->
                 <span class="link-block">
-                  <a href="" target="_blank"
+                  <a href="https://arxiv.org/abs/2510.04066" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="ai ai-arxiv"></i>
@@ -262,7 +262,11 @@
       <div class="column is-five-sixths">
         <h2 class="title">BibTeX</h2>
         <pre style="background-color: #ffffff; overflow-x: auto; white-space: pre-wrap;">
-<code>
+<code>@inproceedings{chen2025quantdemoire,
+    title={QuantDemoire: Quantization with Outlier Aware for Image Demoiréing},
+    author={Chen, Zheng and Zhang, Kewei and Liu, Xiaoyang and Zhang, Weihang and Wang, Mengfan and Fu, Yifan and Zhang, Yulun},
+    journal={arXiv preprint arXiv:2510.04066},
+    year={2025}
 }</code></pre>
       </div>
     </div>
