--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
       <div class="column is-five-sixths">
         <h2 class="title is-3 has-text-left">Performance</h2>
         <figure>
-          <img src="static/figs/performance.png" alt="QuantDemoire Performance Comparison">
-          <figcaption class="title is-5">Performance Comparison in 3,4,6 and 8 Bits</figcaption>
+          <img src="static/figs/performance-chart.png" alt="QuantDemoire Performance Comparison">
+          <figcaption class="title is-5">Performance Comparison in 3, 4, 6, and 8 Bits</figcaption>
         </figure>
         <div class="content has-text-justified" style="margin-top: 1rem;">
           <p>
