--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             
                 <!-- Supplementary PDF link -->
                 <span class="link-block">
-                  <a href="static/pdfs/QuantDemoire_supplementary.pdf" target="_blank"
+                  <a href="https://github.com/zhengchen1999/QuantDemoire/releases/download/v1/Supplementary_Material.pdf" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="fas fa-file-pdf"></i>
